Partly fixed Image Save Functionality

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -104,7 +104,7 @@
         </div>
 
         <div class = "field">
-            {{simple-example}}
+            {{simple-example exerID = id}}
             <br><br>
         </div>
 
