--- a/SelfStart/SelfStartFrontEnd/app/templates/components/upload-file.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/upload-file.hbs
@@ -55,7 +55,7 @@
   {{#if savingInProgress}}
     <button class="ui labeled green icon loading button">Loading</button>
   {{else}}
-    <button class="ui labeled green icon button"{{action 'saveAllFiles' }}>
+    <button class="ui labeled green icon button"{{action 'saveAllFiles' newExerID}}>
       <i class="checkmark icon"></i>
       Save All
     </button>
