--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-rehabplan.hbs
@@ -51,97 +51,14 @@
 
     </div>
 
+    <div>
+      <div class="cd-button">
+        <input type="submit" value="Calc">
+      </div>
+
+    </div>
+
 
 
   </fieldset>
 </form>
-
-
-
-
-{{!--
-  <!--<div class="ui fluid raised very padded text container segment">-->
-
-    <!--<h2 id="rehabPlan" class="ui fluid centered header">Add New Rehab Plan</h2>-->
-
-    <!--<form class="ui form">-->
-      <!--<div class="fields">-->
-        <!--<div class="two wide field">-->
-          <!--<i id="icon" class="black large user icon"></i>-->
-        <!--</div>-->
-        <!--<div class="seven wide field">-->
-          <!--{{input type="text" value = Name placeholder="Rehab plan name"}}-->
-        <!--</div>-->
-
-        <!--<div class="seven wide field">-->
-          <!--{{input type="text" value = authorName placeholder="Author Name"}}-->
-        <!--</div>-->
-      <!--</div>-->
-
-      <!--&lt;!&ndash;Description&ndash;&gt;-->
-      <!--<div class="fields">-->
-        <!--<div class="two wide field">-->
-          <!--<i id="icon" class="black large comment icon"></i>-->
-        <!--</div>-->
-        <!--<div class="fourteen wide field">-->
-          <!--{{input type="text" value = description placeholder="Description"}}-->
-        <!--</div>-->
-      <!--</div>-->
-
-      <!--&lt;!&ndash;goal&ndash;&gt;-->
-      <!--<div class="fields">-->
-        <!--<div class="two wide field">-->
-          <!--<i id="icon" class="black large trophy icon"></i>-->
-        <!--</div>-->
-        <!--<div class="fourteen wide field">-->
-          <!--{{input type="text" value = goal placeholder="Goal"}}-->
-        <!--</div>-->
-      <!--</div>-->
-      <!--&lt;!&ndash;Time to complete&ndash;&gt;-->
-      <!--<div class="fields">-->
-        <!--&lt;!&ndash;icon&ndash;&gt;-->
-        <!--<div class="two wide field">-->
-          <!--<i id="icon" class="black large wait icon"></i>-->
-        <!--</div>-->
-        <!--<div class="four wide field">-->
-          <!--<button class="ui button" {{action "decreaseTime"}}> <i class="black  minus icon"></i></button>-->
-        <!--</div>-->
-        <!--<div class="five wide field">-->
-          <!--{{input type="text" value = ttc placeholder="Time"}}-->
-        <!--</div>-->
-        <!--<div class="four wide field">-->
-          <!--<button class="ui  button"{{action "increaseTime"}}><i class="black  plus icon"></i></button>-->
-        <!--</div>-->
-      <!--</div>-->
-
-      <!--&lt;!&ndash;Exercise&ndash;&gt;-->
-      <!--<div class="fields">-->
-        <!--<div class="two wide field">-->
-          <!--<i id="icon" class="black large comment icon"></i>-->
-        <!--</div>-->
-        <!--<div class="fourteen wide field">-->
-          <!--{{input type="text" value = exercises placeholder="Exercise"}}-->
-        <!--</div>-->
-      <!--</div>-->
-
-
-      <!--&lt;!&ndash;assessment Test&ndash;&gt;-->
-      <!--<div class="fields">-->
-        <!--<div class="two wide field">-->
-          <!--<i id="icon" class="black large comment icon"></i>-->
-        <!--</div>-->
-        <!--<div class="fourteen wide field">-->
-          <!--<div class="ui search">-->
-            <!--<div class="ui icon input">-->
-              <!--<input class="prompt" type="text" placeholder="Search Assessment test">-->
-              <!--<i class="search icon"></i>-->
-            <!--</div>-->
-            <!--<div class="results"></div>-->
-          <!--</div>-->
-          <!--{{input type="text" value = assessmentTests placeholder="Assessmenttests"}}-->
-        <!--</div>-->
-      <!--</div>-->
-
-
-
-  <!--</div>-->--}}
