--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -30,10 +30,10 @@
           <i class="dropdown blue icon"></i>
           {{form.name}}
         </div>
-        {{show-form-questions questions=form.questions}}
+        {{show-form-questions questionorder=form.questionOrder}}
       </div>
       <div class="six wide column right aligned">
-          {{manage-form ID=form.id questions=form.questions}}
+          {{manage-form ID=form.id}}
         </div>
       <div class="two wide column right aligned">
         {{edit-form ID=form.id}}
