fixed bug with form not appearing in question order

--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -33,7 +33,7 @@
         {{show-form-questions questionorder=form.questionOrder}}
       </div>
       <div class="six wide column right aligned">
-          {{manage-form ID=form.id}}
+          {{manage-form ID=form.id form=form}}
         </div>
       <div class="two wide column right aligned">
         {{edit-form ID=form.id}}
