--- a/SelfStart/SelfStartFrontEnd/app/templates/components/manage-form.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/manage-form.hbs
@@ -14,7 +14,7 @@ Manage Form
                         </div>
 
                         <div class="four wide column">
-                         <button {{action "addQuestion" question}}> Add </button>
+                         <button {{action "addQuestion" question form}}> Add </button>
                         </div>
                 {{/each}}
            </div>
