--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -30,7 +30,7 @@
           <i class="dropdown blue icon"></i>
           {{form.name}}
         </div>
-        {{show-form-questions questionorder=form.questionOrder}}
+        {{show-form-questions questions=form.questions}}
       </div>
       <div class="six wide column right aligned">
           {{manage-form ID=form.id form=form}}
