changed edit rehab plan as a seperate link instead of modal

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/delete-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/delete-rehabplan.hbs
@@ -1,7 +1,6 @@
-<button class="ui mini circular labeled icon red button" {{action 'openModal'}}title="Delete">
-  <i class="remove icon"></i>
-  Delete
-</button>
+<p style="cursor: pointer;" {{action 'openModal' }}
+   title="Delete"><i class="red remove icon"></i>
+</p>
 
 {{#ui-modal name= modalName class=modalName }}
   <div class="ui icon header">
