--- a/SelfStart/SelfStartFrontEnd/app/templates/components/simple-example.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/simple-example.hbs
@@ -1,44 +1,14 @@
-{{#if ImageIsAdding}}
-  <div class="ui container">
-    {{upload-file 
-      model = 'image'
-      maximumFileSize = 6
-      multiple=true
-      flag = ImageIsAdding
-      newExerID = exerID
-    }}
-  </div>
-{{else}}
-  {{#each model as |image| }}
-    <div class="ui items">
-      <div class="item">
-        <div class="ui small image">
-          <img src="{{image.imageData}}">
-        </div>
-        <div class="middle aligned content">
-          <div class="header">{{image.name}}</div>
-          <div class="meta">
-            <span>Size: {{image.size}}</span>
-          </div>
-          <div class="description">
-            <span>Type: {{image.type}}</span>
-          </div>
-          <div class="extra">
-            <button class="ui icon red basic button" {{action 'deleteImage' image}}>
-              <i class="remove icon"></i>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-  {{/each}}
+{{!-- <div class="ui container"> --}}
+  {{upload-file 
+    model = 'image'
+    maximumFileSize = 6
+    multiple=true
+    flag = ImageIsAdding
+    ImageName = iName
+    newExerID = exerID
+  }}
+{{!-- </div> --}}
 
-  <br>
-  <button class="ui blue button" {{action 'addNewImage'}}>
-    Add New Image
-  </button>
-
-{{/if}}
 
 
 
