Fixed Exercise-Image Redundancy Display Problem

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-image.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-image.hbs
@@ -16,6 +16,7 @@
                 flag = ImageIsAdding
                 ImageName = iName
                 newExerID = exerID
+                notInAddExercise = true
             }}
 
             {{!-- {{simple-example iName=ImageName}} --}}
