--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -104,8 +104,55 @@
         </div>
 
         <div class = "field">
-            {{simple-example exerID = id}}
-            <br><br>
+
+            {{#each queue as |file| }}
+                <div class="ui divided demo items">
+                    <div class="item">
+                        <div class="image">
+                            {{#if file.isUploading}}
+                                <div class="ui active inverted dimmer">
+                                    <div class="ui loader"></div>
+                                </div>
+                           {{else}}
+                                <img src="{{file.base64Image}}">
+                            {{/if }}
+                        </div>
+                        <div class="middle aligned content">
+                            <div class="description">
+                                {{#if file.isDisplayableImage}}
+                                    <br>
+                                {{else}}
+                                    <p>Unsupported image</p>
+                                {{/if}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {{else}}
+                <div class="ui fluid labeled input">
+                    <label class="ui fluid huge label" style="{{labelStyle}}">
+                        <i class="big cloud upload icon"></i>
+                        Click or Drop files into this area to upload files
+                    </label>
+                    <input type="file" value="target.value" onchange={{action "selectFile"}} style="{{inputStyle}}"
+                    accept="{{accept}}" multiple={{multiple}}>
+                </div>
+                <br>
+            {{/each}}
+
+            {{!-- {{upload-file 
+                model = 'image'
+                maximumFileSize = 6
+                multiple=true
+                flag = ImageIsAdding
+                ImageName = iName
+                newExerID = id
+                notInAddExercise = false
+            }} --}}
+            {{!-- {{simple-example iName=ImageName}} --}}
+            {{!-- <br><br>
+            {{simple-example exerID = id}} --}}
+            {{!-- <br><br> --}}
         </div>
 
         <div class = "inline">
