--- a/SelfStart/SelfStartFrontEnd/app/templates/components/upload-file.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/upload-file.hbs
@@ -26,6 +26,7 @@
             <p>Unsupported image</p>
           {{/if}}
         </div>
+        {{#if notInAddExercise}}
         <div class="extra">
           {{#if file.isDisplayableImage}}
             <button class="ui icon green basic button" {{action 'saveFile' file}}>
@@ -36,6 +37,7 @@
             <i class="remove icon"></i>
           </button>
         </div>
+        {{/if}}
       </div>
     </div>
   </div>
