--- a/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/forms.hbs
@@ -1,24 +1,3 @@
-{{!-- {{ui-accordian}}
-    <h2> Forms </h2>
-    <div class="ui grid">
-     {{#each model.form as |form|}}   
-        <div class="four wide column">
-        <label>{{form.name}}</label>
-        </div>
-        <div class="eight wide column right aligned">
-       {{manage-form ID=form.id}}
-        </div>
-        <div class="four wide column left aligned">
-        {{delete-form ID=form.id}}
-        </div>
-     {{/each}}
-    </div>
-    
-    <br><br><br>
-
-
-{{add-form}} --}}
-
 <br>
 <h2> Forms </h2>
 
@@ -27,7 +6,7 @@
     <div class="ui grid">
       <div class="twelve wide column">
         <div class="title">
-          <i class="dropdown blue icon"></i>
+         <i class="ui dropdown blue icon"></i>
           {{form.name}}
         </div>
         {{show-form-questions questions=form.questions}}
