display questions in route

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-questions.hbs
@@ -1,3 +1,8 @@
 {{#each formModel.questions as |q|}}
-{{q.questionText}}
+
+    {{q.questionText}}<br>
+    {{#isMC q.type}}
+    MC
+    {{/isMC}}
+
 {{/each}}
