temp on exercise enque

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/get-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/get-exercises.hbs
@@ -28,7 +28,7 @@
         <p>{{oneExercise.description}}</p>
       </div>
       <div class="extra">
-        <div class="ui right floated button" {{action "addExercise" oneExercise}}>
+        <div class="ui right floated button" {{action "addExercise" oneExercise oneExercise.id}}>
           Add
         </div>
       </div>
