--- a/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/add-exercises.hbs
@@ -104,7 +104,7 @@
         </div>
 
         <div class = "field">
-
+            
             {{#each queue as |file| }}
                 <div class="ui divided demo items">
                     <div class="item">
@@ -120,6 +120,11 @@
                         <div class="middle aligned content">
                             <div class="description">
                                 {{#if file.isDisplayableImage}}
+                                    <label>Image Name</label>
+                                    {{input type ="text" valueBinding=file.name placeholder="Exercise Name"}}
+                                    <button class="ui red basic button" {{action 'deleteFile' file}}>
+                                        Delete
+                                    </button>
                                     <br>
                                 {{else}}
                                     <p>Unsupported image</p>
@@ -139,6 +144,8 @@
                 </div>
                 <br>
             {{/each}}
+
+
 
             {{!-- {{upload-file 
                 model = 'image'
