--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
@@ -116,7 +116,64 @@
     </div>
 
     <div class = "field">
-        {{simple-example}}
+        {{#each images as |image| }}
+            <div class="ui items">
+                <div class="item">
+                    <div class="ui small image">
+                        <img src="{{image.imageData}}">
+                    </div>
+                    <div class="middle aligned content">
+                        <div class = "content">
+                            <label>Image Name</label> <br>
+                            {{input type ="text" valueBinding=image.name placeholder=image.name}}
+                            <button class="ui red basic button" {{action 'deleteFile' image}}>
+                                Delete
+                            </button>
+            <br>
+            </div>
+        </div>
+      </div>
+    </div>
+  {{/each}}
+          {{#each queue as |file| }}
+                <div class="ui divided demo items">
+                    <div class="item">
+                        <div class="image">
+                            {{#if file.isUploading}}
+                                <div class="ui active inverted dimmer">
+                                    <div class="ui loader"></div>
+                                </div>
+                           {{else}}
+                                <img src="{{file.base64Image}}">
+                            {{/if }}
+                        </div>
+                        <div class="middle aligned content">
+                            <div class="description">
+                                {{#if file.isDisplayableImage}}
+                                    <label>Image Name</label>
+                                    {{input type ="text" valueBinding=file.name placeholder="Exercise Name"}}
+                                    <button class="ui red basic button" {{action 'deleteFile' file}}>
+                                        Delete
+                                    </button>
+                                    <br>
+                                {{else}}
+                                    <p>Unsupported image</p>
+                                {{/if}}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {{else}}
+                <div class="ui fluid labeled input">
+                    <label class="ui fluid huge label" style="{{labelStyle}}">
+                        <i class="big cloud upload icon"></i>
+                        Click or Drop files into this area to upload files
+                    </label>
+                    <input type="file" value="target.value" onchange={{action "selectFile"}} style="{{inputStyle}}"
+                    accept="{{accept}}" multiple={{multiple}}>
+                </div>
+                <br>
+            {{/each}}
         <br><br>
     </div>
 
