--- a/SelfStart/SelfStartFrontEnd/app/templates/exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/exercises.hbs
@@ -13,13 +13,13 @@
     </thead>
 
     <tbody>
-      {{#each model as |Exercise|}}
+      {{#each model.exercise as |Exercise|}}
         <tr>
           <td>{{Exercise.name}}</td>
           <td>{{Exercise.description}}</td>
           <td>
             <div class="four wide column right aligned">
-              {{edit-exercises ID=Exercise.id}}
+              {{edit-exercises ID=Exercise.id images=Exercise.images}}
             </div>
             <div class="four wide column left aligned">
               {{delete-exercises ID=Exercise.id}} 
