--- a/SelfStart/SelfStartFrontEnd/app/templates/components/display-questions.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/display-questions.hbs
@@ -1,8 +1,89 @@
-{{#each formModel.questions as |q|}}
+<script type="text/javascript">$(document).ready(function(){$(".rating").rating();});</script>
 
-    {{q.questionText}}<br>
-    {{#isMC q.type}}
-    MC
-    {{/isMC}}
+<div class="ui form">
+{{#each formModel.questions as |q|}}
+    <br>
+    {{#if q.sa}}
+        <label>{{q.questionText}}</label>
+        <br><br>
+        <div class="ui input focus">
+            <input  type="text">
+        </div>
+    {{/if}}
+
+    {{#if q.ra}}
+        <label>{{q.questionText}}</label>
+        <br><br>
+        <div class="ui large heart rating" data-max-rating="10"></div>
+    {{/if}}
+
+    {{#if q.tf}}
+    <br><br>
+        <div class="inline fields">
+          <label>{{q.questionText}}</label>
+          <div class="field">
+            <div class="ui radio checkbox">
+                <input name="tf" type="radio">
+                <label>True</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+               <input name="tf" type="radio">
+               <label>False</label>
+            </div>
+          </div>
+        </div>
+    {{/if}}
+
+    {{#if q.mc}}
+    <br><br>
+        <div class="grouped fields">
+          <label>{{q.questionText}}</label>
+          <div class="field">
+            <div class="ui radio checkbox">
+                <input name="mc" type="radio">
+                <label>{{mc-display q.optionString 0}}</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+                <input name="mc" type="radio">
+                <label>{{mc-display q.optionString 1}}</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+                <input name="mc" type="radio">
+                <label>{{mc-display q.optionString 2}}</label>
+            </div>
+          </div>
+          {{#if (number-of-mc q.optionNumber 3)}}
+          <div class="field">
+            <div class="ui radio checkbox">
+                <input name="mc" type="radio">
+                <label>{{mc-display q.optionString 3}}</label>
+            </div>
+          </div>
+          {{/if}}
+          {{#if (number-of-mc q.optionNumber 4)}}
+          <div class="field">
+            <div class="ui radio checkbox">
+                <input name="mc" type="radio">
+                <label>{{mc-display q.optionString 4}}</label>
+            </div>
+          </div>
+          {{/if}}
+          {{#if (number-of-mc q.optionNumber 5)}}
+          <div class="field">
+            <div class="ui radio checkbox">
+                <input name="mc" type="radio">
+                <label>{{mc-display q.optionString 5}}</label>
+            </div>
+          </div>
+          {{/if}}
+        </div>
+    {{/if}}
 
 {{/each}}
+</div>
