finished add/delete exercise in rehabplan

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-rehabplan.hbs
@@ -48,7 +48,7 @@
       <br>
       <div class="ui inverted segment">
         <label>Current Exercises</label>
-        {{rehab-exercise exercises=rehabilitationplansData.exercises}}
+        {{rehab-exercise exercises=rehabilitationplansData.exercises thisForm = rehabilitationplansData}}
 
         <ul align = "left">
           {{#each obj as |o|}}
