--- a/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/application.hbs
@@ -1,8 +1,19 @@
 <link integrity="" rel="stylesheet" href="{{rootURL}}assets/css/reset.css"> <!-- CSS reset -->
+{{#admin-nav}}
 
+  <section class="cd-section" style="cursor: pointer;">
+    <ul class="cd-bouncy-nav-trigger"></ul>
+  </section> <!-- .cd-section -->
+
+{{/admin-nav}}
 {{#nav-bar}}
 
     {{outlet}}
+
+
+
 {{/nav-bar}}
+
+
 
 
