--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -4,6 +4,8 @@
 <div id="preloader"><div><em></em><em></em><em></em><em></em></div></div>
 <!-- //PRELOADER -->
 
+
+
 <main class="cd-main-content">
   {{#admin-nav}}
   <div class="cd-fixed-bg cd-bg-1 demo" id="section01">
@@ -18,14 +20,15 @@
 
 
 
-    <section class="cd-section" style="cursor: pointer;">
-      <ul class="cd-bouncy-nav-trigger">Admin</ul>
-    </section> <!-- .cd-section -->
+      <section class="cd-section" style="cursor: pointer;">
+        <ul class="cd-bouncy-nav-trigger"></ul>
+      </section> <!-- .cd-section -->
+
 
 
   </div> <!-- cd-fixed-bg -->
-  {{/admin-nav}}
 
+  {{/admin-nav}}
 
 
         <div class="cd-scrolling-bg cd-color-2 demo" id="section02">
