temp prototype of appointment

--- a/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/welcome-page.hbs
@@ -10,9 +10,11 @@
     <h1 id="logo-image"><img src="assets/images/home/Header.png" style="max-width: 50%;
   height: auto;
   width: auto\9;"></h1>
-
+    {{#link-to 'appointment'}}
     <h1 id="button01">{{#stylish-button type="ujarak"  border="medium" shape="round-s" size="l" textWidth="thick" customClasses="btn-primary"}} Book Appointment {{/stylish-button}}</h1>
+    {{/link-to}}
     <h1 id="button02">{{#stylish-button type="ujarak" border="medium" shape="round-s" size="l" textWidth="thick"}} Ask a Physio {{/stylish-button}}</h1>
+
 
     <a href="#section02"><span></span>Scroll</a>
 
