--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-exercises.hbs
@@ -116,26 +116,30 @@
     </div>
 
     <div class = "field">
-        {{#each images as |image| }}
+        {{#each secQueue as |image| }}
             <div class="ui items">
                 <div class="item">
                     <div class="ui small image">
                         <img src="{{image.imageData}}">
+                        <br><br><br>
                     </div>
                     <div class="middle aligned content">
                         <div class = "content">
                             <label>Image Name</label> <br>
-                            {{input type ="text" valueBinding=image.name placeholder=image.name}}
+                            {{input type ="text" valueBinding=image.name placeholder=image.name}} <br><br>
                             <button class="ui red basic button" {{action 'deleteFile' image}}>
                                 Delete
                             </button>
-            <br>
+                            <br> <br>
+                        </div>
+                    </div>
+                </div>
             </div>
+        {{/each}}
         </div>
-      </div>
-    </div>
-  {{/each}}
-          {{#each queue as |file| }}
+        <div class = "content">
+        {{#each queue as |file| }}
+                <br><br><br>
                 <div class="ui divided demo items">
                     <div class="item">
                         <div class="image">
