--- a/SelfStart/SelfStartFrontEnd/app/templates/components/edit-patient.hbs
+++ b/SelfStart/SelfStartFrontEnd/app/templates/components/edit-patient.hbs
@@ -88,6 +88,9 @@
       <label class="cd-label" for="cd-email">Email</label>
       {{input class="email" type="email" value = pateintsData.email required = true}}
     </div>
+  </fieldset>
+
+  <fieldset>
 
     <div>
       <div class="cd-button">
@@ -95,9 +98,4 @@
       </div>
     </div>
   </fieldset>
-
-
-
-
-
 </form>
